--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta http-equiv="refresh" content="0;url=https://docs.qq.com/doc/DUG9YQ0JMWGJxQ3FD">
-  <title></title>
+  <title>迅游.中国</title>
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js?id=K44lUjxAiUs8WZvG&ck=K44lUjxAiUs8WZvG"></script>
 </head>
 <body>
 
 <script>
-
+  window.location.href = "http://t1.ink/f/8spd5d";
 </script>
 </body>
 </html>
