--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <script>
-  window.location.href = "http://t1.ink/f/8spd588d";
+  window.location.href = "https://docs.qq.com/doc/DU1ZYSlhHSUhqTnNh";
 </script>
 </body>
 </html>
